# the-travelling-trucker-problem

./: .gitignore  README.md  gpu_worker.py  non_hash_worker.py  worker.py
number_generation/: numbers.py
speed_compare/: python_speed_test.py  python_speed_test_hash.py  ruby_speed_test.rb  ruby_speed_test_2d_array.rb  ruby_speed_test_hashed.rb
speed_compare/rust_speed_test/: Cargo.toml
speed_compare/rust_speed_test/src/: main.rs
test_scripts/gpu_tests/: array_creation_benchmarking.py  gpu_test.py  gpu_test_int_to_perm.py  gpu_validate.py
test_scripts/lexcographic_tests/: lex_algo_speed_test.py  permutation_drift_test.py  permutation_integer.py
test_scripts/microcontroller_scripts/esp32/: boot.py  readme.md  worker.py
test_scripts/microcontroller_scripts/esp32/esp-now/: readme.md  reciever_code.py  sender_code.py
test_scripts/microcontroller_scripts/raspberry_pi_pico/: worker.py
test_scripts/optimization_scripts/: optimal_test_code.py  optimal_test_code_multithreaded.py  permutation_integer.py  test_code_2d_Array.py  worker_tuple.py
test_scripts/ruby/: worker.rb
test_versions/: optimal_test_code_distance_sum.py
